# supysonic

./: .cli.py.un~  .coveragerc  .editorconfig  .gitignore  .mediafile.py.un~  .readthedocs.yaml  .requirements.txt.un~  .scanner.py.un~  .travis.yml  API-INFOS.md  MANIFEST.in  PACKAGING.md  README.md  apacheconfig  ci-requirements.txt  cli.py  cli.py~  config.py  config.sample  db.py  debug_server.py  dict2xml.py  folder.py  folder_manager.py  lastfm.py  main.py  main.wsgi  mediafile.py  mediafile.py~  playlist.py  pyproject.toml  requirements.txt  requirements.txt~  scanner.py  scanner.py~  server.py  setup.cfg  setup.py  supysonic-daemon.service  supysonic.cgi  (+7 more)
.github/workflows/: package.yaml  tests.yaml
api/: .media.py.un~  __init__.py  albums_songs.py  annotation.py  browse.py  chat.py  media.py  media.py~  playlists.py  rating.py  scrobble.py  search.py  star.py  system.py  user.py
cgi-bin/: server.py  supysonic.cgi  supysonic.fcgi  supysonic.wsgi
config/: config.sh  supysonic.conf
docs/: api.md  api.rst  cli.md  conf.py  configuration.md  configuration.rst  index.rst  jukebox.md  jukebox.rst  make.bat  transcoding.md  transcoding.rst  usage.rst
docs/_static/: custom.css
docs/man/: README.md  index.rst  supysonic-cli-folder.rst  supysonic-cli-user.rst  supysonic-cli.rst  supysonic-daemon.rst  supysonic-server.rst
docs/setup/: configuration.rst  daemon.rst  database.rst  index.rst  install.rst
frontend/: .user.py.un~  __init__.py  folder.py  playlist.py  user.py  user.py~
managers/: folder.py  user.py
schema/: mysql.sql  postgresql.sql  sqlite.sql
schema/migration/: 20161030.postgresql.sql  20171022.mysql.sql  20171022.sqlite.sql  20171230.mysql.py  20171230.sqlite.py  20180221.mysql.sql  20180311.postgresql.sql  20180311.sqlite.sql  20180317.postgresql.py  20180521.postgresql.sql
supysonic/: __init__.py  __main__.py  cache.py  cli.py  config.py  covers.py  daemon.py  db.py  jukebox.py  lastfm.py  ldap.py  listenbrainz.py  py23.py  scanner.py  scanner_master.py  utils.py  watcher.py  web.py
supysonic/api/: __init__.py  albums_songs.py  annotation.py  browse.py  chat.py  errors.py  exceptions.py  extensions.py  formatters.py  jukebox.py  media.py  playlists.py  podcast.py  radio.py  scan.py  search.py  system.py  unsupported.py  user.py  videos.py
supysonic/daemon/: __init__.py  __main__.py  client.py  exceptions.py  server.py
supysonic/frontend/: __init__.py  folder.py  playlist.py  user.py
supysonic/managers/: __init__.py  folder.py  ldap.py  user.py
supysonic/schema/: mysql.sql  postgres.sql  sqlite.sql
supysonic/server/: __init__.py  __main__.py  _base.py  gevent.py  gunicorn.py  waitress.py
supysonic/templates/: addfolder.html  adduser.html  change_mail.html  change_pass.html  change_username.html  folders.html  home.html  importusers.html  layout.html  login.html  playlist.html  playlist_export.m3u  playlists.html  profile.html  users.html
templates/: addfolder.html  adduser.html  change_mail.html  change_pass.html  folders.html  home.html  importusers.html  layout.html  login.html  no-frontend.html  playlist.html  playlists.html  profile.html  users.html
tests/: __init__.py  appmock.py  db.py  issue101.py  issue129.py  issue133.py  issue139.py  issue148.py  issue221.py  issue85.py  test_api.py  test_api_user.py  test_db.py  test_frontend.py  test_manager_folder.py  test_manager_user.py  testbase.py  transcoding_tools.py  utils.py  with_net.py
tests/api/: __init__.py  _dataset.py  apitestbase.py  appmock.py  test_album_songs.py  test_annotation.py  test_api_setup.py  test_browse.py  test_chat.py  test_jukebox.py  test_lyrics.py  test_media.py  test_playlist.py  test_podcast.py  test_radio.py  test_response_helper.py  test_scan.py  test_search.py  test_system.py  test_transcoding.py  test_user.py
tests/assets/: 23bytes.txt  issue133.flac  issue139.aac  sample.ini  subsonic-rest-api-1.10.2.xsd  subsonic-rest-api-1.12.0-os.xsd  subsonic-rest-api-1.12.0.xsd  subsonic-rest-api-1.16.0-os.xsd  subsonic-rest-api-1.16.0.xsd  subsonic-rest-api-1.8.0.xsd  subsonic-rest-api-1.9.0.xsd
(+86 files in other folders)
