[metadata]
name = Supysonic
version = attr: supysonic.VERSION
url = https://supysonic.readthedocs.io
download_url = https://github.com/spl0k/supysonic
author = Alban Féron
author_email = alban.feron@gmail.com
license = GNU AGPLv3
license_files = LICENSE

description = Python implementation of the Subsonic server API
long_description =
    Supysonic is a Python implementation of the [Subsonic][] server API.

    Current supported features are:
    * browsing (by folders or tags)
    * streaming of various audio file formats
    * transcoding
    * user or random playlists
    * cover art
    * starred tracks/albums and ratings
    * [Last.FM][lastfm] scrobbling
    * Jukebox mode

    Supysonic currently targets the version 1.10.2 of the Subsonic API. For more
    details, go check the [API implementation status][docs-api].

    [subsonic]: http://www.subsonic.org/
    [lastfm]: https://www.last.fm/
    [docs-api]: https://supysonic.readthedocs.io/en/latest/api.html

long_description_content_type = text/markdown
keywords = subsonic, music, server

classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Multimedia :: Sound/Audio

[options]
python_requires = >=3.7
install_requires =
    click
    flask >=0.11
    peewee
    Pillow >=9.1.0
    requests >=1.0.0
    mediafile
    watchdog >=0.8.0
    zipstream-ng >=1.1.0, <2.0.0

packages = find_namespace:
include_package_data = true
zip_safe = false

[options.packages.find]
include = supysonic*

[options.entry_points]
console_scripts =
    supysonic-cli = supysonic.cli:main
    supysonic-daemon = supysonic.daemon:main
    supysonic-server = supysonic.server:main

[options.data_files]
share/man/man1 = man/*.1
